--- a/package.json
+++ b/package.json
@@ -12,7 +12,15 @@
     "@angular/platform-browser": "~20.1.0",
     "@angular/platform-browser-dynamic": "~20.1.0",
     "@angular/router": "~20.1.0",
+    "@nestjs/common": "^11.0.0",
+    "@nestjs/core": "^11.0.0",
+    "@nestjs/platform-express": "^11.0.0",
+    "@nestjs/typeorm": "^11.0.0",
+    "better-sqlite3": "^12.2.0",
+    "reflect-metadata": "^0.1.13",
     "rxjs": "~7.8.0",
+    "sqlite3": "^5.1.7",
+    "typeorm": "^0.3.26",
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
@@ -23,12 +31,17 @@
     "@angular/compiler-cli": "~20.1.0",
     "@angular/language-service": "~20.1.0",
     "@eslint/js": "^9.8.0",
+    "@nestjs/schematics": "^11.0.0",
+    "@nestjs/testing": "^11.0.0",
     "@nx/angular": "21.4.0",
     "@nx/eslint": "21.4.0",
     "@nx/eslint-plugin": "21.4.0",
     "@nx/jest": "21.4.0",
     "@nx/js": "21.4.0",
+    "@nx/nest": "21.4.0",
+    "@nx/node": "21.4.0",
     "@nx/web": "21.4.0",
+    "@nx/webpack": "21.4.0",
     "@nx/workspace": "21.4.0",
     "@schematics/angular": "~20.1.0",
     "@swc-node/register": "~1.9.1",
@@ -50,6 +63,7 @@
     "ts-node": "10.9.1",
     "tslib": "^2.3.0",
     "typescript": "~5.8.2",
-    "typescript-eslint": "^8.29.0"
+    "typescript-eslint": "^8.29.0",
+    "webpack-cli": "^5.1.4"
   }
 }
