--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@nestjs/platform-express": "^11.0.0",
     "@nestjs/typeorm": "^11.0.0",
     "better-sqlite3": "^12.2.0",
+    "lucide-angular": "^0.540.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "~7.8.0",
     "sqlite3": "^5.1.7",
@@ -57,6 +58,7 @@
     "jest-environment-jsdom": "^30.0.2",
     "jest-preset-angular": "~15.0.0",
     "jest-util": "^30.0.2",
+    "jsonc-eslint-parser": "^2.1.0",
     "nx": "21.4.0",
     "prettier": "^2.6.2",
     "ts-jest": "^29.4.0",
